nifi/base/deployment-nifi-ca.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi-ca
  labels:
    app: ca-ca
    chart: "ca-1.0.1"
    release: "nifi"
    heritage: "Helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ca-ca
      release: nifi
  template:
    metadata:
      labels:
        app: ca-ca
        release: nifi
    spec:
      serviceAccountName: nifi-ca-sa
      containers:
      - name: ca
        imagePullPolicy: "IfNotPresent"
        image: "apache/nifi-toolkit:1.12.1"
        command:
        - sh
        - -c
        - |
          if [ -f config.json ]; then
            OPTIONS="--configJson config.json --useConfigJson"
          fi
          exec ${NIFI_TOOLKIT_HOME}/bin/tls-toolkit.sh server -c "nifi-ca" -t sixteenCharacters -p 9090 ${OPTIONS}
        resources:
          requests:
            cpu: "0.1"
            memory: 250Mi
        ports:
        - containerPort: 9090
        livenessProbe:
          initialDelaySeconds: 90
          periodSeconds: 60
          tcpSocket:
            port: 9090
        volumeMounts:
        - mountPath: /ca
          name: nifi-ca
          subPath: ca
        workingDir: /ca
      terminationGracePeriodSeconds: 0
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      volumes:
      - name: nifi-ca
        persistentVolumeClaim:
          claimName: nifi-ca
