nifi/base/ss-nifi-registry.yaml
---
# Source: nifi/charts/registry/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi-registry
  labels:
    helm.sh/chart: registry-0.3.2
    app.kubernetes.io/name: registry
    app.kubernetes.io/instance: nifi
    app.kubernetes.io/version: "0.8.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: registry
      app.kubernetes.io/instance: nifi
  serviceName: nifi-registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry
        app.kubernetes.io/instance: nifi
    spec:
      serviceAccountName: nifi-registry
      securityContext:
        {}
      containers:
        - name: registry
          securityContext:
            {}
          image: nifi-registry
          imagePullPolicy: IfNotPresent
          command:
            - bash
            - -ce
            - |
              ${NIFI_REGISTRY_BASE_DIR}/scripts/start.sh
          ports:
            - name: http
              containerPort: 18080
              protocol: TCP
          volumeMounts:
            
            - name: "database"
              mountPath: /opt/nifi-registry/nifi-registry-current/database
            
            
            - name: "flow-storage"
              mountPath: /opt/nifi-registry/nifi-registry-current/flow_storage
              subPath: flow_storage
            
          resources:
            {}
          readinessProbe:
            tcpSocket:
              port: 18080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 2
            failureThreshold: 3
      volumes:
  
  volumeClaimTemplates:
  - metadata:
      name: database
    spec:
      accessModes:
      - ReadWriteOnce
      
      resources:
        requests:
          storage: "1Gi"
  - metadata:
      name: flow-storage
    spec:
      accessModes:
      - ReadWriteOnce
      
      resources:
        requests:
          storage: "1Gi"
