nifi/base/service-nifi-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-headless
  labels:
    app: "nifi"
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8443
      name: http
    - port: 6007
      name: cluster
  selector:
    app: "nifi"
    release: "nifi"
