nifi/base/service-nifi-metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-metrics
  labels:
    app: "nifi"
spec:
  ports:
    - name: metrics
      port: 9092
      protocol: TCP
      targetPort: metrics
  selector:
    app: nifi
    release: nifi
  type: ClusterIP
