nifi/base/service-nifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nifi
  labels:
    app: "nifi"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: nifi
    release: nifi
