nifi/base/route-nifi.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: "nifi"
  name: nifi
spec:
  to:
    kind: Service
    name: nifi
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
